deploy/k8s/webapp/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookingapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /sample/(/|$)(.*)
        backend:
          serviceName: webapp
          servicePort: 80
